<resources>
    <string name="app_name">LazyJogger</string>
    <string name="tab_text_1">Run!</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="unknown">Unknown</string>
    <string name="splashScreenDesc">Splash Screen</string>
    <string name="history_image">History image</string>
    <string name="BTName">Name</string>
    <string name="BTMac">Mac</string>
    <string name="BTStrength">Strength</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_run">Start Run!</string>
    <string name="profile_picture">Profile picture</string>
    <string name="your_name">Your Name</string>
    <string name="hours_of_rest_left">Hours of rest left</string>
    <string name="latest_run">Latest run</string>
    <string name="_30_10_14_45">30.10. 14:45</string>
    <string name="_9_hours">9 hours</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="time">%1$s</string>
    <string name="distance">%1$s km</string>
    <string name="distanceTitle">Distance</string>
    <string name="speed">Speed</string>
    <string name="bmp">%1$s bmp</string>
    <string name="speedText">%1$s km/h</string>
    <string name="heart_rate">Heart rate</string>
    <string name="timeTitle">Time</string>
    <string name="heartbeattext">%1$s bpm</string>
    <string name="steps">Steps</string>
    <string name="stepcounter">%1$s</string>
    <string name="metersCardView">Distance: %1$s meters!</string>
    <string name="dateCardView">%1$s</string>
    <string name="timecardview">Time: %1$s</string>
    <string name="average_bpm">Average bpm: %1$s</string>
</resources>
