<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/name"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/BTName"/>


    <TextView
        android:id="@+id/mac"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/BTMac"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/str"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/BTStrength"
        android:padding="10dp"/>

</LinearLayout>