<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunActivity">


    <org.osmdroid.views.MapView
        android:id="@+id/mapRunning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sensorRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/startScan"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="end|top"
            android:layout_margin="12dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_search_black_36dp" />

        <ImageButton
            android:id="@+id/endRun"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="end|top"
            android:layout_margin="12dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_flag_black_36dp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom"
        android:background="@drawable/run_view_menu"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:paddingTop="6dp"
            app:layout_constraintBottom_toTopOf="@id/distanceLayout"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/timeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeTitle"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Time" />

            <Chronometer
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="44sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/distanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:paddingTop="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeLayout">

            <TextView
                android:id="@+id/currentDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distanceTitle"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Distance" />

            <TextView
                android:id="@+id/distanceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="44sp"
                android:textStyle="bold"
                tools:text="13.3 km" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/distanceLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/speedTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/speedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speedText"
                    android:textSize="26sp"
                    tools:text="6.2 km/h" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heartbeatTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/heart_rate"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/heartbeatText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/heartbeattext"
                    android:textSize="26sp"
                    tools:text="120 bpm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stepCounterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/stepCounterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stepcounter"
                    android:textSize="26sp"
                    tools:text="15 steps" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>