<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:animateLayoutChanges="true"
        android:elevation="8dp"
        android:minHeight="170dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="8dp"
            android:text="@string/dateCardView"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/historyImage"
                    android:layout_width="100dp"
                    android:layout_height="170dp"
                    android:layout_gravity="top"
                    android:contentDescription="@string/history_image"
                    android:padding="10dp"
                    android:src="@drawable/ic_directions_run_white_24dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timecardview"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/testText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/metersCardView"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="bottom"
                    android:layout_margin="25dp"
                    android:paddingHorizontal="25dp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>